@@ -31,14 +31,19 @@
 
 #include <stdio.h>
 
+#include "stdio_private.h"
+
 int
 fputs(const char *str, FILE *stream)
 {
 	char c;
 	int rv = 0;
 
+	if ((stream->flags & __SWR) == 0)
+		return EOF;
+
 	while ((c = *str++) != '\0')
-		if (fputc(c, stream) == EOF)
+		if (stream->put(c) != 0)
 			rv = EOF;
 
 	return rv;
